# CVProjectsWithOpenCV

./: .gitignore  CMakeLists.txt  README.md  conanfile.py  conanfile.txt  output_to_master_dir.cmake
Beginner/: Beginner.sln
Beginner/Beginner/: Beginner.vcxproj  main.cpp
CVWithOpenCV/: CMakeLists.txt
CVWithOpenCV/Chapter5/: main.cpp
CVWithOpenCV/Chapter6/: CMakeLists.txt  main.cpp
CVWithOpenCV/Chapter7/: CMakeLists.txt
Chapter1/Beginner/: Beginner.vcxproj  Beginner.vcxproj.filters  OpenGL.cpp
Chapter2/: CMakeLists.txt  main.cpp  main3.cpp
Chapter3/: CMakeLists.txt  Contours.cpp
Chapter5/: CMakeLists.txt  main.cpp
Chapter5/ObjectDetection/: CMakeLists.txt  Preprocessing.cpp  Preprocessing.h
Chapter6/: CMakeLists.txt  main.cpp
Chapter7/: main.cpp
ExtractFeaturesTesting/: CMakeLists.txt  ExtractFeatures.cpp  ExtractFeatures.h  ExtractFeaturesTesting.cpp
ImageSegmentationTesting/: CMakeLists.txt  ImageSegmentationTesting.cpp
Lib/ObjectDetection/: Preprocessing.cpp  Segmentation.cpp
Lib/OpenCVHelpers/: MultipleImageWindow.h
ObjectDetection/: CMakeLists.txt  Preprocessing.cpp  Preprocessing.h  Segmentation.cpp  Segmentation.h
OpenCVHelpers/: CMakeLists.txt  GeneralHelpers.h  MultipleImageWindow.cpp  MultipleImageWindow.h
OpenCVPlayground/: CMakeLists.txt  main.cpp
OpenCVPlayground/ColorTesting/: CMakeLists.txt
OpenCVPlayground/Objects/: Ball.h  CMakeLists.txt  Color.h  main.cpp
OpenCVTutorials/: Contours.cpp
SVMTesting/: main.cpp
cmake/: CMakeLists.txt  main.cpp
conan_profiles/: ubuntu.profile
cpp/: CMakeLists.txt  README.md  buld_all.sh  conanfile.py  platformAPIDefs.h
cpp/CVWithOpenCVBook/: CMakeLists.txt
cpp/CVWithOpenCVBook/Chapter2/: OpenCVConfig.cmake  ReadWrite.h  main.cpp  main2.cpp
cpp/CVWithOpenCVBook/Chapter3/: CMakeLists.txt
cpp/CVWithOpenCVBook/Chapter5/: CMakeLists.txt
cpp/CVWithOpenCVBook/Chapter6/: CMakeLists.txt  main.cpp
cpp/CVWithOpenCVBook/Chapter7/: CMakeLists.txt  main.cpp
cpp/CVWithOpenCVBook/ExtractFeatures/: CMakeLists.txt
cpp/OpenCVPlayground/: CMakeLists.txt  ReadMe.md
cpp/OpenCVPlayground/ColorTesting/: CMakeLists.txt  main.cpp
cpp/OpenCVPlayground/Objects/: CMakeLists.txt  Color.h  Shape.h  main.cpp
cpp/lib/ObjectDetection/: CMakeLists.txt  Preprocessing.h  Segmentation.h
cpp/lib/OpenCVHelpers/: CMakeLists.txt  MultipleImageWindow.h
lib/: CMakeLists.txt
lib/ObjectDetection/: Segmentation.cpp
lib/OpenCVHelpers/: CMakeLists.txt  MultipleImageWindow.cpp
